GUI-2425 fixed enablement of time shift buttons

--- a/eucaconsole/static/sass/pages/cloudwatch_charts.scss
+++ b/eucaconsole/static/sass/pages/cloudwatch_charts.scss
@@ -117,7 +117,7 @@ svg {
         width: 3rem;
         height: 3rem;
         font-size: 3rem;
-        color: $euca-grey;
+        color: $hpe-gray;
     }
 }
 
@@ -134,6 +134,9 @@ svg {
             cursor: pointer;
             color: $hpe-green;
         }
+        &[disabled] {
+            color: $hpe-lightgray;
+        }
     }
     .graph-shift-right {
         float: right;
@@ -142,6 +145,9 @@ svg {
         &:hover {
             cursor: pointer;
             color: $hpe-green;
+        }
+        &[disabled] {
+            color: $hpe-lightgray;
         }
     }
 }
